--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
             <div>
                 <h1>Create Account</h1>
             </div> 
-            <lable style="font-weight:bold ;">Your Name (full name)</lable><br>
-            <input style="width:2.7in ;" type="text">
+            <lable style="font-weight:bold ;">Your Name</lable><br>
+            <input style="width:2.7in ;" placeholder="Enter your full name" type="text" required >
         </div>
 
         <div class="child">
             <label>Mobile Number</label><br>
-            <input style="width:2.7in ;" type="tel">
+            <input style="width:2.7in ;" placeholder="enter you  mobile number" type="tel" required>
         </div>
 
         <div class="child">
             <label>Email (optional)</label><br>
-            <input style="width:2.7in ;" type="email" >
+            <input style="width:2.7in ;" type="email" required >
         </div>
 
         <div class="child">
             <label>Password</label><br>
-            <input style="width:2.7in ;" type="password"><br>
+            <input style="width:2.7in ;" placeholder="at least 6 characters" type="password" required><br>
             <span style="color:grey;">Passwords must be at least 6 characters</span>
 
             <p>By enrollig your mobile phone number, you consent to receive authomated security notifications
