--- a/login.html
+++ b/login.html
@@ -45,7 +45,12 @@
                 <h1 style="font-size:40px ;" >Sign in</h1>
             </div> 
             <lable style="font-weight:bold ;font-size:20px ;">Email or mobile phone number</lable> <br>
-            <input style="width:2.7in ;border-style: solid;border-color:orange;font-size:20px ; " type="text">
+            <input style="width:2.7in ;border-style: solid;border-color:orange;font-size:20px ;" type="text" required>
+            <div>
+                <lable style="font-weight:bold ;font-size:20px ;">Password</lable> <br>
+                <input style="width:2.7in ;border-style: solid;border-color:orange;font-size:20px ;" type="password" required>
+            </div>
+    
 
             <div class="child">
                 <center> <a href="./Welcome Page.html"><input style="width:3.7in ;text-align: center;background-color:rgba(238, 181, 75, 0.979);border:1px solid black;padding:4px ;border-radius:2.5px ;" type="button" value="Continue"></a> </center>
