--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <div class="child">
             <label>Mobile Number</label><br>
-            <input style="width:2.7in ;" placeholder="enter you  mobile number" type="tel" required>
+            <input style="width:2.7in ;" placeholder="enter your mobile number" type="tel" required>
         </div>
 
         <div class="child">
